# XPlataformer-for-Android

./: CMakeLists.txt  README.md  README_PORT_AND_ANDROID.md  README_SDL2_FULL_PORT.md  game_core.cpp  game_core.hpp  main.cpp  sdl2_full_port.cpp
